--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -265,9 +265,9 @@
             <div class="login-with">
                 <p><strong>OR</strong></p>
                 <div class="login-links">
-                     <a href="{% provider_login_url 'google' %}" class="login-link google">
+                     <a href="" class="login-link google">
                                 <img src="{% static 'img/google.png' %}" alt="Google"> Google
-                            </a>
+                            </a> 
                 </div>
                 <div class="register-link">
                     <p>Don't have an account? <a href="{% url 'register' %}">Register here</a></p>
