--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -265,7 +265,7 @@
             <div class="login-with">
                 <p><strong>OR</strong></p>
                 <div class="login-links">
-                     <a href="" class="login-link google">
+                     <a href="{% provider_login_url 'google' %}" class="login-link google">
                                 <img src="{% static 'img/google.png' %}" alt="Google"> Google
                             </a> 
                 </div>
