--- a/app/templates/health_home.html
+++ b/app/templates/health_home.html
@@ -195,10 +195,10 @@
                             <i class="fab fa-uikit mx-2"></i>
                             <a href="{% url 'manage_appointments' %}" class="no-underline">Manage Appointments</a>
                         </li>
-                        <li class="sidebar-link">
+                        {% comment %} <li class="sidebar-link">
                             <i class="fas fa-upload"></i> &nbsp;&nbsp;
                            <a href="{% url 'upload_image' %}" class="no-underline">Upload Image</a>
-                        </li>
+                        </li> {% endcomment %}
                         
                     </ul>
                 </aside>
