--- a/app/templates/upload_image.html
+++ b/app/templates/upload_image.html
@@ -1,4 +1,4 @@
-{% load static %}
+{% comment %} {% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -342,4 +342,4 @@ document.querySelector('form').onsubmit = function(event) {
     </script>
 </body>
 
-</html>
+</html> {% endcomment %}
